[package]
name = "bscpeer"
version.workspace = true
edition.workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-discv4 = { workspace = true, features = ["test-utils"] }
reth-engine-primitives.workspace = true
reth-ethereum-forks = { workspace = true, features = ["serde"] }
reth-eth-wire.workspace = true
reth-eth-wire-types.workspace = true
reth-network = { workspace = true, features = ["test-utils"] }
reth-network-api.workspace = true
reth-network-peers.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-revm.workspace = true
reth-ethereum-primitives.workspace = true


# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# misc
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-node-ethereum.workspace = true

[features]

serde = [
    "alloy-primitives/serde",
    "alloy-consensus/serde",
    "alloy-chains/serde",
    "reth-eth-wire/serde",
    "reth-eth-wire-types/serde",
    "reth-ethereum-forks/serde",
    "reth-primitives-traits/serde",
    "reth-ethereum-primitives/serde",
    "secp256k1/serde",
    "bytes/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-revm/serde",
]
